--- a/_posts/2025-04-08-ROS2_Build.md
+++ b/_posts/2025-04-08-ROS2_Build.md
@@ -21,10 +21,10 @@ This series aims to fill that gap—bridging the world of ROS2 functionality wit
 
 In this series, we’ll walk through key steps to build a more secure ROS2 setup from the OS level and beyond:
 
-- ✅ Post-install system updates
-- 👤 Creating a dedicated ROS user
-- 🤖 Installing ROS2 securely
-- 🔐 Configuring AppArmor and Auditd
+- ✅ [Post-install system updates](https://dev.to/sebos/setting-up-a-secure-ros-2-system-part-2-updating-ubuntu-and-creating-a-ros-user-jl7)
+- 👤 [Creating a dedicated ROS user](https://dev.to/sebos/setting-up-a-secure-ros-2-system-part-2-updating-ubuntu-and-creating-a-ros-user-jl7)
+- 🤖 [Installing ROS2 securely](https://dev.to/sebos/setting-up-a-secure-ros-2-system-part-3-installing-ros-2-3p2c)
+- 🔐 [Configuring AppArmor and Auditd](https://dev.to/sebos/securing-ros-2-with-apparmor-and-auditd-a-practical-guide-16fb)
 - 🌐 Setting up basic firewall rules
 - 🧰 Enabling SROS2 for secure communication
 - 🔎 Installing and configuring Suricata for network intrusion detection
