Updated for new ROS2 article

--- a/_posts/2025-04-08-ROS2_Build.md
+++ b/_posts/2025-04-08-ROS2_Build.md
@@ -25,7 +25,7 @@ In this series, we’ll walk through key steps to build a more secure ROS2 setup
 - 👤 [Creating a dedicated ROS user](https://dev.to/sebos/setting-up-a-secure-ros-2-system-part-2-updating-ubuntu-and-creating-a-ros-user-jl7)
 - 🤖 [Installing ROS2 securely](https://dev.to/sebos/setting-up-a-secure-ros-2-system-part-3-installing-ros-2-3p2c)
 - 🔐 [Configuring AppArmor and Auditd](https://dev.to/sebos/securing-ros-2-with-apparmor-and-auditd-a-practical-guide-16fb)
-- 🌐 Setting up basic firewall rules
+- 🌐 [Setting up basic firewall rules](https://dev.to/sebos/-robot-security-with-ros-2-and-ufw-firewalls-for-the-future-of-robotics-334e)
 - 🧰 Enabling SROS2 for secure communication
 - 🔎 Installing and configuring Suricata for network intrusion detection
 - 📄 Creating a baseline security report
