add google analytics

--- a/_posts/2025-04-20-SROS2-Setup.md
+++ b/_posts/2025-04-20-SROS2-Setup.md
@@ -1,5 +1,5 @@
 ---
-title: "Securing ROS2 Nodes with SROS2t"
+title: "Securing ROS2 Nodes with SROS2"
 date: 2025-04-30 10:00:00 +0000
 categories: [Robotics, ROS2 Install Series, Security]
 tags: [ros2, robotics, cybersecurity, linux]
