Did more articles BMC

--- a/_posts/2025-05-07-Suricata.md
+++ b/_posts/2025-05-07-Suricata.md
@@ -190,3 +190,12 @@ You're now protected against common threats that might slip past firewalls or go
 *Looking to learn more about ROS2 security, SROS2 node permissions, or robotic system hardening? Bookmark this [series](https://dev.to/sebos/secure-ros2-setup-hardening-your-robot-project-from-the-start-448a) and follow along as we secure each layer of our Linux-based robotic system.*
 
 For more content like this, tools, and walkthroughs, visit my site at **[Sebos Technology](https://sebostechnology.com)**.
+
+---
+
+☕ **Did you find this article helpful?**  
+Consider supporting more content like this by buying me a coffee:  
+[![Buy Me A Coffee](https://img.shields.io/badge/Buy%20Me%20A%20Coffee-Donate-yellow)](https://www.buymeacoffee.com/sebostechnology)  
+Your support helps me write more Linux tips, tutorials, and deep dives.
+
+[https://www.buymeacoffee.com/sebostechnology](https://www.buymeacoffee.com/sebostechnology)
