--- a/_posts/2025-05-18-Fail2Ban.md
+++ b/_posts/2025-05-18-Fail2Ban.md
@@ -250,3 +250,12 @@ Kick off your SSH hardening journey with [**Your First Steps to a Hardened SSH S
 
 Drop a comment or reach out—we’re here to help. For more content like this, tools, and walkthroughs, visit my site at **Sebos Technology**.
 
+
+---
+
+☕ **Did you find this article helpful?**  
+Consider supporting more content like this by buying me a coffee:  
+[![Buy Me A Coffee](https://img.shields.io/badge/Buy%20Me%20A%20Coffee-Donate-yellow)](https://www.buymeacoffee.com/sebostechnology)  
+Your support helps me write more Linux tips, tutorials, and deep dives.
+
+[https://www.buymeacoffee.com/sebostechnology](https://www.buymeacoffee.com/sebostechnology)
