--- a/_posts/2025-05-18-Fail2Ban.md
+++ b/_posts/2025-05-18-Fail2Ban.md
@@ -2,7 +2,7 @@
 title: 🛡️ Complete Guide to Fail2Ban - Protect Your SSH Server from Brute Force Attacks
 date: 2025-05-18 12:11 +0000
 description: "Protect your Linux servers from SSH brute-force attacks with Fail2Ban. This guide covers easy-to-follow configuration steps, security best practices, and testing methods to harden your SSH access."
-image: /assets/img/Fail2Ban.png
+image: /assets/img/fail2ban2.png
 categories: [Linux Security, Server Hardening, SSH Security, Fail2Ban, DevOps Tutorials, Cybersecurity Best,  Practices]
 tags: [SSH Security, Fail2Ban Configuration, Prevent Brute Force Attacks, Linux Server Hardening, SSH 2FA, SSH Key Authentication, Secure SSH Login, Fail2Ban SSH Setup, Cybersecuritym Linux Security Best Practices]
 ---
